--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -225,3 +225,17 @@
     font-size: 17px;
     line-height: 1.3;
 }
+/* reach out section */
+.section-title {
+    font-size: 55px;
+    display: inline-block;
+    padding: 0 100px 20px 100px;
+    border-bottom: 3px solid;
+    margin-bottom: 35px;
+    color: #024e76;
+}
+
+.contact {
+    text-align: center;
+    background: #024e76;
+}
