flex box structuring

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -141,11 +141,8 @@
 }
 /* End Hero format */
 
-.intro {text-align: center;
-}
 
 .steps {
-    text-align: center;
     background: #fce138;
 }
 
@@ -179,14 +176,13 @@
     width: 80%;
     font-size: 20px;
     margin: 0 auto;
+    text-align: center;
+    
 }
 
 .section-title {
     font-size: 55px;
     color: #024e76;
-    margin-bottom: 35px;
-    padding: 0 100p 20 px 100px;
-    display: inline-block;
     border-bottom: 3px solid;
 }
 
@@ -200,7 +196,6 @@
 
 /*trainer information */
 .trainers {
-    text-align: center;
 }
 
 .trainer {
@@ -248,14 +243,18 @@
 /* reach out section */
 .section-title {
     font-size: 55px;
-    display: inline-block;
-    padding: 0 100px 20px 100px;
     border-bottom: 3px solid;
-    margin-bottom: 35px;
     color: #024e76;
+    padding-bottom: 20px;
+    text-align: center;
+    margin: 0 auto 35px auto;
+    width: 50%;
 }
 
 .contact {
-    text-align: center;
     background: #024e76;
+}
+
+.flex-row {
+    display: flex;
 }
