--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -87,7 +87,7 @@
   
   /* HERO STYLES START */
   .hero {
-    background-image: url('../images/hero-bg.jpg');
+    background-image: url(/assets/images/hero-bg.jpg);
     background-size: cover;
     background-position: center;
     display: flex;
@@ -361,26 +361,104 @@
     display: flex;
   }
 
-  /* MEDIA QUERY FOR SMALLER DESKTOP SCREENS AND SMALLER */
-  @media screen and (max-width 980 px) {
-      header h1 a{
-          /* this will be applied on any screen smaller than 980 px */
-          color: tomato;
-      }
-  }
+@media screen and (max-width 980px) {
+    header {
+        padding-bottom: 0;
+        justify-content: center;
+    }
 
-  /* MEDIA QUERY FOR TABLETS AND SMALLER */
-  @media screen and (max-width: 768px) {
-      header h1 {
-          /*this will be applied on any screen between 768 and 575px */
-          font size: 80px;
-      }
-  }
+}
 
-  /*MEIDA QUERY FOR MOBILE PHONES AND SMALLER */
-  @media screen and (max-width: 575px) {
-      header h1 {
-          /* this will be applied on any screen smaller than 575px */
-          font-size: 100px;
-      }
-  }
+header h1 {
+    width: 100%;
+    text-align: center;
+}
+
+header nav ul {
+    margin-top: 20px;
+    width: 100%;
+    justify-content: center;
+}
+
+header nav ul li a {
+    font-size: 20px;
+}
+
+footer h2, footer div {
+    text-align: center;
+    width: 100%;
+}
+
+.hero-cta, .hero-form {
+    width: 100%;
+}
+
+.hero-cta {
+    text-align: center;
+}
+
+.section-title {
+    width: 80%;
+}
+
+.trainer {
+    flex: 0 70%;
+}
+
+.contact-info iframe {
+    flex: 1 100%;
+}
+
+
+@media screen and (max-width 768px) {
+    section {
+        padding: 30px 15px;
+    }
+
+    .step h3 {
+        flex: 1 100%;
+        text-align: center;
+    }
+
+    .step-info: {
+        flex: 2 100%;
+        text-align: center;
+        justify-content: center;
+    }
+
+    .step-text {
+        flex: 100%
+    }
+}
+
+@media screen and (max-width 768px) {
+
+    .hero-form button {
+        width: 100%;
+    }
+
+    .section-title {
+        width: 95%;
+    }
+
+    .intro-p {
+        width: 100%;
+    }
+
+    .trainer {
+        flex: 0 100%;
+    }
+
+    .contact-info {
+        text-align: center;
+    }
+
+    .contact-info > * {
+        flex: 0 100%;
+    }
+
+    .contact-form {
+        order: 3;
+    }
+
+}
